# alliance-docs-mcp

./: .dockerignore  .gitignore  CURSOR_SETUP.md  Dockerfile  README.md  TESTING.md  VERSION_2_PROPOSAL.md  docker-entrypoint.sh  fly.example.toml  main.py  mcp.json  models.md  pyproject.toml  server_entrypoint.py  test_mcp_client.py
.cursor/plans/: next_version_features_cc6b2160.plan.md
.github/workflows/: manual-rebuild-all.yml  weekly-sync.yml
docs/: index.json  llms.txt
docs/pages/Cybersecurity/: Cybersecurity_Personal_computer_health_check.md
docs/pages/General/: ABINIT.md  ABINIT_en.md  ACPYPE.md  ADF.md  ADF_en.md  AI_and_Machine_Learning.md  AI_and_Machine_Learning_en.md  AMBER.md  AMS.md  AMS_en.md  ARM_software.md  ARM_software_en.md  Abaqus.md  Abaqus_en.md  Accessing_CVMFS.md  Accessing_CVMFS_en.md  Accessing_object_storage_with_WinSCP.md  Accessing_object_storage_with_WinSCP_en.md  Accessing_object_storage_with_s3cmd.md  Accessing_the_Arbutus_object_storage_with_AWS_CLI.md  Account_renewal.md  Account_renewal_FAQ.md  Acknowledging_the_Alliance.md  Advanced_Job_Submission.md  Advanced_Jupyter_configuration.md  Advanced_Jupyter_configuration_en.md  Advanced_MPI_scheduling.md  Advanced_MPI_scheduling_en.md  AiiDA.md  Allocations_and_compute_scheduling.md  Allocations_and_compute_scheduling_en.md  AlphaFold2.md  AlphaFold3.md  Altair_FEKO.md  Anaconda.md  Anaconda_en.md  Ansys.md  AnsysEDT.md  Ansys_en.md  Apache_Spark.md  (+513 more)
docs/pages/Getting Started/: Getting_started.md  Getting_started_en.md  Getting_started_with_the_new_national_systems.md  Installing_software_in_your_home_directory.md  Installing_software_in_your_home_directory_en.md
docs/pages/META-Farm/: META-Farm_Advanced_features_and_troubleshooting.md  META-Farm_Advanced_features_and_troubleshooting_en.md
docs/pages/Migration2016/: Migration2016_Migrating_to_SFU_Storage.md  Migration2016_Migrating_to_Waterloo_Storage.md
docs/pages/Technical Reference/: Cloud_Technical_Glossary.md  Cloud_Technical_Glossary_en.md  RAPIDS.md  Rapid_Access_Service.md  (+6 more)
scripts/: sync_docs.py
src/alliance_docs_mcp/: __init__.py  converter.py  mirror.py  search_index.py  server.py  storage.py
tests/: __init__.py  test_converter.py  test_mirror.py  test_prompts.py  test_related_index.py  test_search_index.py  test_server_search.py  test_storage.py
(+38 files in other folders)
