[project]
name = "alliance-docs-mcp"
version = "0.1.0"
description = "MCP server for Alliance documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "pypandoc>=1.15",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "whoosh>=2.7.4",
    "chromadb>=0.6.3",
    "sentence-transformers>=2.2.0",
    "numpy>=1.26.0",
    "langdetect>=1.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alliance_docs_mcp"]

[tool.hatch.build]
include = [
    "docs/**",
    "server_entrypoint.py",
    "scripts/**",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.14.1",
]
